--- a/src/app/sobremi/sobremi.component.html
+++ b/src/app/sobremi/sobremi.component.html
@@ -16,7 +16,7 @@
 
        <p class="fw-bold">Informacion Basica:<span class="fw-normal"> Galvez Nicolas</span></p>
        <p class="fw-bold">Fecha de Nacimiento: <span class="fw-normal">01/04/2003</span></p>
-       <p class="fw-bold">Email: <span class="fw-normal"> nicolasgalvez051@gmail.com</span></p>
+       <p class="fw-bold">Email: <span class="fw-normal"> Nicolasgalvez051@gmail.com</span></p>
        <p class="fw-bold">Pais: <span class="fw-normal"> Argentina</span></p>
        <p class="fw-bold">Idiomas: <span class="fw-normal"> Español</span></p>
       </div>
